tests/error/tested.default
build:
run: $BINARY % --messages=minimal
cleanup: 

exit: != 0
stderr: !=
